--- a/css/globals/base.css
+++ b/css/globals/base.css
@@ -68,7 +68,8 @@ h5 {
 }
 
 .footer_navlink, 
-p {
+p,
+.filter__select-box {
     font-size: 1rem;
     font-weight: 400;
     line-height: 24px;
